# password-manager

./: CMakeLists.txt  README.md  main.cpp
Consts/: Consts.h
Debug/: debug.h
GUI/: console_interface.cpp  console_interface.h
ReadWriteManager/: rwmanager.cpp  rwmanager.h
User/: User.cpp  User.h
